--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -4,4 +4,4 @@ fixtures:
       repo: 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
       ref: '4.6.0'
   symlinks:
-    'varnish': "#{source_dir}"
+    varnish: "#{source_dir}"
