--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ env:
     - PUPPET_GEM_VERSION="~> 4.6.0"
     - PUPPET_GEM_VERSION="~> 4.7.0"
     - PUPPET_GEM_VERSION="~> 4.8.0"
+    - PUPPET_GEM_VERSION="~> 4.9.0"
+    - PUPPET_GEM_VERSION="~> 4.10.0"
     - PUPPET_GEM_VERSION="~> 4"
 
 sudo: false
@@ -65,6 +67,10 @@ matrix:
       env: PUPPET_GEM_VERSION="~> 4.7.0"
     - rvm: 1.8.7
       env: PUPPET_GEM_VERSION="~> 4.8.0"
+    - rvm: 1.8.7
+      env: PUPPET_GEM_VERSION="~> 4.9.0"
+    - rvm: 1.8.7
+      env: PUPPET_GEM_VERSION="~> 4.10.0"
     - rvm: 1.8.7
       env: PUPPET_GEM_VERSION="~> 4"
     - rvm: 2.3.1
